project/test/semantics/good/input/Good41_shouldEvaluateForeach.ty
singleton class GenericTypes {
    
    actions: {
        main: () -> Void = {
            val list: List[Int] = List[Int](3, 4, 222, 5);
            for (x: Int; in list) {
                System#print(x)
                System#print(" ")
            }
        }
    }
}
